force-app/main/default/objects/Veiculo__c/fields/Chassi__c.field-meta.xml
<CustomField>
    <fullName>Chassi__c</fullName>
    <label>Chassi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>