force-app/main/default/objects/Veiculo__c/fields/Cor__c.field-meta.xml
<CustomField>
    <fullName>Cor__c</fullName>
    <label>Cor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>