force-app/main/default/objects/Veiculo__c/fields/KM__c.field-meta.xml
<CustomField>
    <fullName>KM__c</fullName>
    <label>KM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>