force-app/main/default/objects/Veiculo__c/fields/Leilao__c.field-meta.xml
<CustomField>
    <fullName>Leilao__c</fullName>
    <label>Leilao</label>
    <length>50</length>
    <type>Text</type>
</CustomField>