force-app/main/default/objects/Veiculo__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>